--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -91,6 +91,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * https://www.docsolver.com/en.html[DocSolver]
 * http://dov-e.com[DOV-E]
 * http://dploy.io/[dploy.io]
+* https://dreamtolearn.com[Dream to Learn]
 * http://drwtrading.com[DRW Trading Group]
 * https://www.dyne.org[Dyne.org]
 * http://www.ebay.com/[eBay]
