--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -7,7 +7,34 @@ Rich Hickey
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-== Minimal Install
+Welcome to Clojure!
+
+== Brew install
+
+If you are on Mac OS X, you can install the latest stable version of Clojure with:
+
+[source,shell]
+----
+brew install clojure
+----
+
+Or the latest development version with:
+
+[source,shell]
+----
+brew install --devel clojure
+----
+
+Then start the interactive REPL with:
+
+[source,shell]
+----
+clj
+----
+
+You can find more info on using the `clj` and `clojure` scripts in the <<deps_and_cli#,Deps and CLI Guide>>.
+
+== JAR Install
 
 Clojure requires only http://java.sun.com/javase/downloads/index.jsp[Java] 1.6 or greater, plus the Clojure JAR file itself.
 
@@ -16,28 +43,35 @@ Clojure requires only http://java.sun.com/javase/downloads/index.jsp[Java] 1.6 o
 ----
 java -cp clojure-1.8.0.jar clojure.main
 ----
-This will bring up a read-eval-print loop (REPL). From the REPL, try:
-[source,clojure]
-----
-user=> (+ 1 2 3)
-6
-user=> (javax.swing.JOptionPane/showMessageDialog nil "Hello World")
-----
+This will bring up a read-eval-print loop (REPL). 
+
+* Note: This process will not work in the latest development version (1.9.0-alpha...) as Clojure has been split into several jars. More info to come when 1.9 releases.
 
 == Try Clojure Online
 
-* http://tryclj.com/[TryClojure] provides a browser-based Clojure REPL
-* http://himera.herokuapp.com/index.html[Himera] provides a browser-based ClojureScript REPL
+These sites provide browser-based Clojure repls for interactive exploration:
 
-== Clojure with Leiningen
+* https://repl.it/languages/clojure[repl.it]
+* http://tryclj.com/[TryClojure]
+
+== Leiningen
 
 https://leiningen.org/[Leiningen] is a build and project management tool written in Clojure and used pervasively throughout the Clojure community. Follow the instructions there to install Leiningen.
 
 Once it's installed you can start a REPL with:
 
-[source]
+[source,shell]
 ----
 lein repl
 ----
 
-Check out the <<xref/../../community/resources#,Resources>> page for tutorials and other great resources!
+== Boot
+
+http://boot-clj.com/[Boot] is a build-focused DSL written in Clojure. Follow the Getting Started instructions to install Boot, then start a REPL with:
+
+[source,shell]
+----
+boot repl
+----
+
+Check out the <<learn/syntax#,Learn Clojure>> pages or <<xref/../../community/resources#,Resources>> page to get started with tutorials and resources on learning Clojure!
