--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -9,32 +9,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 Welcome to Clojure!
 
-== Clojure scripts and deps support
-
-If you are on Mac OS X, you can install the latest stable version of Clojure with:
-
-[source,shell]
-----
-brew install clojure
-----
-
-Or the latest development version with:
-
-[source,shell]
-----
-brew install --devel clojure
-----
-
-Then start the interactive REPL with:
-
-[source,shell]
-----
-clj
-----
-
-Installers for more systems are coming soon. You can find more info on using the `clj` and `clojure` scripts in the <<deps_and_cli#,Deps and CLI Guide>>.
-
-== JAR Install
+== Minimal Install
 
 Clojure requires only http://java.sun.com/javase/downloads/index.jsp[Java] 1.6 or greater, plus the Clojure JAR file itself.
 
