convert companies list to csv

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -9,306 +9,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 
 Also, check out the <<success_stories#,Clojure Success Stories>> and <<community_stories#,Community Stories>> pages!
 
-* http://8thlight.com/[8th Light]
-* http://www.aclaimant.com/[aclaimant]
-* http://www.adaptly.com/[Adaptly]
-* http://www.adgoji.com/[AdGoji]
-* https://www.adstage.io/[AdStage]
-* http://www.advanceautoparts.com/[Advance Auto Parts]
-* http://adzerk.com/[Adzerk]
-* http://www.onthemarket.com/[Agents' Mutual]
-* http://www.airloyal.com[Airloyal]
-* http://akvo.org/[akvo.org]
-* http://altometrics.com/[Altometrics]
-* http://www.amazon.com[Amazon]
-* https://amperity.com/[Amperity]
-* http://annadaletech.com/[Annadale Technologies]
-* http://www.answers.com[Answers.com]
-* http://www.anywhere.com/[Anywhere.com]
-* https://www.apexdatasolutions.net/[Apex Data Solutions]
-* http://www.appsflyer.com/[AppsFlyer]
-* http://www.appsnsites.com/[Appsnsites]
-* http://ardoq.com/[Ardoq]
-* https://attendify.com/[Attendify]
-* http://auspost.com.au/[Australia Post]
-* http://www.aviso.io/[Aviso]
-* https://www.bandsquare.com/[BandSquare]
-* https://teachbanzai.com/[Banzai]
-* http://www.baresquare.com/[baresquare] - http://www.baresquare.com/vittle-collaboration/[Vittle]
-* http://beanstalkapp.com/[Beanstalk]
-* http://BearyInnovative.com[BearyInnovative]
-* http://bevuta.com/[bevuta]
-* https://billfront.com/[BillFront]
-* https://www.bookwell.com.au/[BookWell]
-* https://boundlessgeo.com/[Boundless Geo]
-* https://www.braintreepayments.com/[Braintree Payments] (acquired by PayPal)
-* http://www.breezeehr.com/[Breeze EHR]
-* http://brickalloy.com/[BrickAlloy]
-* https://www.brightin.nl/[Brightin]
-* http://www.brightnorth.co.uk/[Bright North]
-* http://broadpeakpartners.com[BroadPeak]
-* https://buddy.works/[Buddy]
-* http://bugsbio.org/[BUGS Bioscience]
-* http://buyhappy.co/[Buy Happy]
-* https://www.capitalone.com/[CapitalOne]
-* https://cardforcoin.com/[cardforcoin] and https://foldapp.com/[Fold]
-* https://carouselapps.com/[Carousel Apps]
-* http://www.ca.com/[CA Technologies]
-* http://www.cerner.com/[Cerner]
-* http://chariotsolutions.com/[Chariot Solutions]
-* http://chartbeat.com[Chartbeat]
-* http://www.cicayda.com/[Cicayda]
-* https://circleci.com/[CircleCI]
-* http://www.citi.com[Citi]
-* http://clanhr.com/en[ClanHR]
-* http://www.climate.com/[Climate Corp] (acquired by http://www.monsanto.com[Monsanto])
-* http://www.clubhousehq.com/[Clubhouse]
-* http://www.codurance.com/[Codurance]
-* http://code54.com[Code54]
-* https://www.cognician.com/[Cognician]
-* http://codecentric.de[codecentric]
-* http://devartcodefactory.com/[Co(de)factory]
-* http://cognitect.com[Cognitect]
-* https://collbox.co/[CollBox]
-* http://collectivedigitalstudio.com[Collective Digital Studio]
-* https://www.concur.com/[Concur]
-* http://www.consumerreports.org/cro/index.htm[Consumer Reports]
-* http://www.create.at/[CREATE.21st century]
-* http://www.consumerfinance.gov/[CFPB (Credit Financial Protection Bureau)]
-* http://www.cstap.com/[Cybozu Startups]
-* http://www.cycloid.io[Cycloid]
-* http://www.dailymail.co.uk/[Daily Mail MailOnline]
-* https://www.databaselabs.io/[Database Labs]
-* http://www.datacraft.sg/[Datacraft]
-* http://www.datasnap.io/[DataSnap.io]
-* http://www.datomic.com/[Datomic]
-* https://www.deep-impact.ch/[Deep Impact AG]
-* http://degree9.io/[Degree9]
-* http://democracy.works/[Democracy Works]
-* http://www.designed.ly/[Designedly]
-* https://www.db.com[Deutsche Bank]
-* https://www.devatics.com/[Devatics]
-* https://www.docsolver.com/en.html[DocSolver]
-* http://dov-e.com[DOV-E]
-* http://dploy.io/[dploy.io]
-* https://dreamtolearn.com[Dream to Learn]
-* http://drwtrading.com[DRW Trading Group]
-* https://www.dyne.org[Dyne.org]
-* http://www.ebay.com/[eBay]
-* http://element84.com[Element 84]
-* http://www.empear.com/[Empear]
-* https://writeandimprove.com/[English Language iTutoring]
-* http://enterlab.dk[Enterlab]
-* http://eventfabric.com/[Event Fabric]
-* https://www.eyeota.com/[Eyeota]
-* https://exoscale.ch/[Exoscale]
-* http://facebook.com[Facebook]
-* http://www.facjure.com/[Facjure]
-* http://www.factual.com/[Factual]
-* http://www.farbetter.com/[FarBetter]
-* https://farmlogs.com/[FarmLogs]
-* http://www.finalist.nl/[Finalist]
-* http://flocktory.com[Flocktory]
-* http://www.flowa.fi/[Flowa]
-* http://www.formcept.com/[FORMCEPT]
-* http://try.framed.io/[Framed Data]
-* https://www.fullcontact.com/[FullContact]
-* http://functionalworks.com/[Functional Works]
-* http://fundingcircle.com[Funding Circle]
-* http://futurice.com/[Futurice]
-* http://www.getcontented.com.au/[GetContented]
-* http://about.getset.com/[GetSet]
-* http://www.gocatch.com/[GoCatch]
-* https://gofore.com/en/home/[Gofore]
-* https://www.go-jek.com[GO-JEK]
-* https://goldfynch.com/[GoldFynch]
-* https://goodhertz.co/[Goodhertz]
-* http://www.goopti.com/[GoOpti]
-* http://www.gracenote.com/[Gracenote]
-* http://www.groupon.com[Groupon]
-* https://hashrocket.com/[Hashrocket]
-* http://www.healthfinch.com/[healthfinch]
-* https://www.helpshift.com/[Helpshift]
-* http://www.hendrickauto.com/[Hendrick Automotive Group]
-* http://www.heroku.com[Heroku]
-* https://hexawise.com/[Hexawise]
-* https://homescreen.is/[#Homescreen]
-* http://www.ib5k.com/[IB5k]
-* http://labs.ig.com/[IG]
-* https://immute.co/[Immute]
-* https://indabamusic.com[Indaba Music]
-* http://innoq.com[InnoQ]
-* https://instadeq.com/[instadeq]
-* http://www.intentmedia.com/[Intent Media]
-* http://www.interware.com.mx/[InterWare] - http://caudal.io/[Caudal]
-* http://www.intuit.com[Intuit]
-* http://www.iplantcollaborative.org/[iPlant Collaborative]
-* http://iris.tv/[IRIS.TV]
-* https://www.jcrew.com/[J.Crew]
-* http://juxt.pro[JUXT]
-* https://kirasystems.com/[Kira Inc]
-* http://www.kodemaker.no/[Kodemaker]
-* https://kwelia.com/[Kwelia]
-* https://www.theladders.com/[Ladders]
-* http://leancloud.cn[Leancloud.cn]
-* http://en.leanheat.com[Leanheat]
-* https://www.lendup.com/[LendUp]
-* http://levelmoney.com[Level Money]
-* http://www.lifebooker.com[Lifebooker]
-* http://liftoff.io/[Liftoff]
-* http://lightmesh.com[LightMesh]
-* http://likely.co/[Likely]
-* https://line.me/[LINE]
-* http://www.listora.com/[Listora]
-* http://www.liveops.com/[LiveOps]
-* https://www.livingsocial.com/[LivingSocial]
-* http://logicsoft.co.in/[Logic Soft Pvt. Ltd.]
-* http://lonocloud.com/[LonoCloud] (acquired by https://www.viasat.com/[ViaSat])
-* https://www.loway.ch/[Loway]
-* http://www.madriska.com/[Madriska Inc.]
-* http://www.magnet.coop/[Magnet]
-* http://mainstreetgenome.com/[Main Street Genome]
-* http://www.comidadagente.org/[Marktbauer/Comida da gente]
-* http://www.mastodonc.com/[Mastodon C]
-* https://mazira.com/[Mazira]
-* http://meewee.com[MeeWee]
-* http://www.metabase.com/[Metabase]
-* http://www.metail.com[Metail]
-* http://metosin.fi/[Metosin]
-* http://minorodata.com/[Minoro]
-* http://www.mixrad.io/[MixRadio]
-* http://www.modelogiq.com/[modelogiq]
-* http://www.molequedeideias.net/[Moleque de Ideias]
-* http://www.mysema.com/[Mysema]
-* http://nilenso.com/[nilenso]
-* http://nemCV.com[nemCV.com]
-* https://www.netflix.com[Netflix]
-* https://www.neustar.biz/[Neustar]
-* http://www.nextangles.com[NextAngles]
-* https://www.nubank.com.br/[Nubank]
-* https://nukomeet.com/[Nukomeet]
-* http://numerical.co.nz/[Numerical Brass Computing]
-* http://www.omnyway.com/[Omnyway Inc]
-* https://ona.io[Ona]
-* https://onlinecasinoinformatie.com/[OnlineCasinoInformatie]
-* https://opencompany.com/[OpenCompany]
-* http://OpenSensors.io[OpenSensors.io]
-* http://www.opentable.com/[OpenTable]
-* http://www.oracle.com[Oracle]
-* http://www.orgsync.com/[OrgSync]
-* https://www.oscaro.com/[Oscaro.com]
-* http://otto.de[Otto]
-* http://ourhub.dk[OurHub]
-* http://www.outpace.com/[Outpace]
-* http://corp.outpostgames.com/[Outpost Games]
-* http://owsy.com[Owsy]
-* http://paddleguru.com[PaddleGuru]
-* http://www.bdpanacea.com/[Panacea Systems]
-* https://www.pandora.com/[Pandora]
-* http://paper.li[paper.li]
-* https://www.parcelbright.com/[ParcelBright]
-* http://www.passivsystems.com/[PassivSystems]
-* http://path.com/[Path]
-* http://paygarden.com[PayGarden]
-* https://www.payoff.com/[Payoff]
-* http://www.pennymacusa.com[PennyMac]
-* http://www.pivotal.io/[Pivotal Labs]
-* http://www.pointslope.com[Point Slope]
-* https://pol.is/about/[Pol.is]
-* http://dmarc.postmarkapp.com/[Postmark]
-* https://precursorapp.com/[Precursor]
-* http://www.premium.nl/[Premium Business Consultants BV]
-* http://prime.vc/[Prime.vc]
-* http://www.print.io/[Print.IO]
-* http://projexsys.com/[Projexsys]
-* https://publizr.com/[Publizr]
-* http://puppetlabs.com/[Puppet Labs]
-* http://purpleapp.com[Purple]
-* https://quartethealth.com/[Quartet Health]
-* http://www.quintype.com/[Quintype]
-* http://reaktor.com/[Reaktor]
-* https://www.redhat.com/[Red Hat]
-* https://www.redpineapplemedia.com/[Red Pineapple Media]
-* http://rentpath.com/[RentPath]
-* http://jbrj.gov.br/[Rio de Janeiro Botanical Garden] - http://cncflora.jbrj.gov.br/[CNCFlora], https://biodivdev.github.io/[OSS]
-* http://rjmetrics.com/[RJMetrics]
-* http://rocketfuel.com/[Rocket Fuel]
-* http://www.romr.com/[Rōmr]
-* http://www.roomkey.com/[RoomKey] - see http://cognitect.com/consulting/case-studies/roomkey[case study]
-* http://roomstorm.com/[Roomstorm]
-* http://roximity.com/[ROXIMITY]
-* https://www.rts.ch/info[RTS]
-* http://www.salesforce.com/[Salesforce]
-* http://www.shareablee.com/[Shareablee]
-* https://sharetribe.com/[Sharetribe]
-* http://shore.li/[shore.li]
-* http://www.signafire.com[Signafire]
-* http://signal.uk.com/[Signal]
-* http://docs.svbplatform.com/[Silicon Valley Bank]
-* http://silverline.mobi/[Silverline Mobile]
-* http://www.silverpond.com.au/[Silverpond]
-* https://www.simple.com/[Simple]
-* https://www.simply.co.za[Simply]
-* http://www.sinapsi.com/[Sinapsi]
-* http://us.sios.com/[SIOS Technology Corp.]
-* http://smilebooth.com/[Smilebooth]
-* http://smxemail.com/[SMX]
-* https://socialsuperstore.com/[Social Superstore]
-* https://www.solita.fi/[Solita]
-* http://sonian.com/[Sonian]
-* https://soundcloud.com[Soundcloud]
-* https://www.sparkfund.co/[SparkFund]
-* https://www.spotify.com[Spotify]
-* https://exchange.staples.com/[Staples Exchange]
-* http://www.staples-sparx.com/[Staples Sparx]
-* https://status.im/[Status]
-* https://www.stitchdata.com/[Stitch]
-* http://structureddynamics.com/[Structured Dynamics]
-* http://www.studyflow.nl[Studyflow]
-* https://www.style.com[Style.com]
-* http://about.stylitics.com/[Stylitics]
-* http://www.suprematic.net/[Suprematic]
-* http://swirrl.com/[Swirrl]
-* http://www.tappcommerce.com/[Tapp Commerce]
-* http://www.technoidentity.com/[TechnoIdentity]
-* http://www.teradata.com[Teradata] - http://www.teradata.com/Teradata-Loom[Loom]
-* http://testdouble.com/[Test Double]
-* http://www.thinktopic.com/[ThinkTopic]
-* http://www.thoughtworks.com/[ThoughtWorks] - http://www.thoughtworks.com/clients/ioof[IOOF] (and others)
-* http://www.threatgrid.com/[ThreatGRID] (acquired by http://www.cisco.com/[Cisco])
-* http://www.tokenmill.co/[TokenMill]
-* https://touk.pl[TouK]
-* http://www.trioptima.com/[TriOptima]
-* https://truckerpath.com[Trucker Path]
-* http://www.twosigma.com/[Two Sigma]
-* https://unacast.com/[Unacast]
-* http://unbounce.com/[Unbounce]
-* https://unfold.com/[Unfold]
-* http://www.uhn.ca/[University Health Network]
-* http://www.upworthy.com/[Upworthy]
-* http://ustream.tv/[Ustream]
-* http://www.uswitch.com/[uSwitch]
-* http://vigiglobe.com/[Vigiglobe]
-* https://www.virool.com/[Virool]
-* http://vitallabs.co/[Vital Labs]
-* http://www.walmartlabs.com/[Walmart Labs]
-* https://weave.fi/[Weave]
-* http://wefarm.org[WeFarm]
-* https://www.whibse.com[Whibse]
-* http://wikidocs.com/[Wikidocs] (acquired by https://www.atlassian.com[Atlassian])
-* http://wildbit.com/[Wildbit]
-* http://wit.ai[Wit.ai] (acquired by http://facebook.com[Facebook])
-* https://work.co/[work.co]
-* https://workframe.com/[Workframe]
-* http://www.workinvoice.it/[Workinvoice]
-* http://worldsingles.com/[World Singles]
-* https://xcoo.jp/[Xcoo, Inc.] - https://chrov.is[Chrovis], http://newshack.io/[Hacker News Hack]
-* http://xnlogic.com[XN Logic]
-* http://yellerapp.com/[Yeller]
-* http://www.yieldbot.com[Yieldbot]
-* http://yetanalytics.com/[Yet Analytics]
-* http://yousee.dk/[Yousee IT Innovation Labs]
-* http://www.yummly.com/[Yummly]
-* http://www.yuppiechef.com/[Yuppiechef]
-* http://tech.zalando.com[Zalando] - https://zalando.github.io/[OSS]
-* http://www.zendesk.com[Zendesk]
+[format="csv", options="header"]
+|===
+include::companies.csv[]
+|===
