--- a/content/community/devchangelog.adoc
+++ b/content/community/devchangelog.adoc
@@ -11,6 +11,12 @@ The official https://github.com/clojure/clojure/blob/master/changes.md[changelog
 
 == Release 1.9
 
+=== https://groups.google.com/d/msg/clojure/UEtE1K9C7XE/5p5BJe2tAQAJ[1.9.0-beta1] (Sep 18, 2017)
+
+1.9.0-beta1 includes the following changes since 1.9.0-alpha20:
+
+- http://dev.clojure.org/jira/browse/CLJ-2077[CLJ-2077] - Clojure can't be loaded from the boot classpath under java 9
+
 === https://groups.google.com/d/msg/clojure/IB2CaORBMnM/a0f66eC1DAAJ[1.9.0-alpha20] (Sep 7, 2017)
 
 1.9.0-alpha20 includes the following changes since 1.9.0-alpha19:
